--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr" style="height:100%">
 <head>
   <meta charset="utf-8">
-  <title>Feedback</title>
+  <title>Audit Tool</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
